syntax = "proto3";

package protobuf;

option go_package = ".";

service NotificationService {
  rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc ClearNotification (ClearNotificationRequest) returns (ClearNotificationResponse);
  rpc ClearAllNotifications (ClearAllNotificationsRequest) returns (ClearAllNotificationsResponse);
}

message GetNotificationsRequest {
  string user_id = 1;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

message ClearNotificationRequest {
  string user_id = 1;
  string notification_id = 2;
}

message ClearNotificationResponse {
  bool success = 1;
}

message ClearAllNotificationsRequest {
  string user_id = 1;
}

message ClearAllNotificationsResponse {
  bool success = 1;
}

message Notification {
  string id = 1;
  string message = 2;
}
